Updated fabric.mod.json deps and removed kotlin adapter

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.warning.mode=all
 # Check these on https://fabricmc.net/develop/
 minecraftVersion=1.19.2
 yarnMappings=1.19.2+build.28
-loaderVersion=0.14.10
+fabricLoaderVersion=0.14.10
 # Fabric API
 fabricVersion=0.67.0+1.19.2
 loomVersion=0.12-SNAPSHOT
