Pre-release cleanup

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,16 @@ kotlin.code.style=official
 org.gradle.jvmargs=-Xmx1G
 org.gradle.warning.mode=all
 # Check these on https://fabricmc.net/develop/
-minecraftVersion=1.20.5
-yarnMappings=1.20.5+build.1
+minecraftVersion=1.20.3
+yarnMappings=1.20.3+build.1
 fabricLoaderVersion=0.16.12
 # Fabric API
-loomVersion=1.7-SNAPSHOT
+loomVersion=1.10-SNAPSHOT
 # Mod Properties
-modVersion=2024.9.1
+modVersion=2025.4.1
 mavenGroup=dev.syoritohatsuki
 archivesBaseName=fstats-api
 # Kotlin
 systemProp.kotlinVersion=2.0.0
+# Mod Menu
+modmenuVersion=9.0.0
