--- a/gradle.properties
+++ b/gradle.properties
@@ -6,10 +6,12 @@ minecraftVersion=1.20.2
 yarnMappings=1.20.2+build.4
 fabricLoaderVersion=0.16.12
 # Fabric API
-loomVersion=1.7-SNAPSHOT
+loomVersion=1.10-SNAPSHOT
 # Mod Properties
-modVersion=2024.9.1
+modVersion=2025.4.1
 mavenGroup=dev.syoritohatsuki
 archivesBaseName=fstats-api
 # Kotlin
 systemProp.kotlinVersion=2.0.0
+# Mod Menu
+modmenuVersion=8.0.1
